Fixed problem with no tags entered

--- a/Collectors/Views/Items/Add.cshtml
+++ b/Collectors/Views/Items/Add.cshtml
@@ -60,7 +60,7 @@
             </div>
         }
     }
-    <button asp-action="Index" class="btn btn-primary btn-sm" type="submit">
+    <button id="sentButton" asp-action="Index" class="btn btn-primary btn-sm" type="submit">
         @SharedLocalizer["Finish"]
     </button>
 </form>
