--- a/Collectors/Views/Items/Edit.cshtml
+++ b/Collectors/Views/Items/Edit.cshtml
@@ -64,7 +64,7 @@
             </div>
         }
     }
-    <button asp-action="Save" class="btn btn-primary btn-sm" type="submit">
+    <button  id="sentButton" asp-action="Save" class="btn btn-primary btn-sm" type="submit">
         @SharedLocalizer["Finish"]
     </button>
 </form>
