--- a/Collectors/Views/Shared/_Layout.cshtml
+++ b/Collectors/Views/Shared/_Layout.cshtml
@@ -12,25 +12,28 @@
     <link rel="stylesheet" href="~/css/tagify.css" />
 </head>
 <body>
-    <header class="darkmode-ignore w-100" style="background-color:cadetblue">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3e">
-            <div class="container">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark font-weight-bolder" asp-area="" asp-controller="Home" asp-action="Index">@Localizer["Home"]</a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-dark font-weight-bolder" asp-area="" asp-controller="Home" asp-action="Privacy">@Localizer["Privacy"]</a>
-                        </li>
-                    </ul>
-                </div>
+    <header class="darkmode-ignore w-100" style="background-color:#371148">
+        <nav class="navbar navbar-expand-lg">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" 
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
 
+                    <li class="nav-item">
+                        <a class="nav-link text-light font-weight-bolder" asp-area="" asp-controller="Home" asp-action="Index">@Localizer["Home"]</a>
+                    </li>
+                    <li>
+                        <a class="nav-link text-light font-weight-bolder" asp-area="" asp-controller="Home" asp-action="Privacy">@Localizer["Privacy"]</a>
+                    </li>
+                </ul>
+                <partial name="_LoginPartial" />
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
             </div>
         </nav>
     </header>
