--- a/Collectors/Views/Shared/_LoginPartial.cshtml
+++ b/Collectors/Views/Shared/_LoginPartial.cshtml
@@ -4,28 +4,29 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
-    @if (SignInManager.IsSignedIn(User))
-    {
+<ul class="navbar-nav mr-3">
+    <li class="nav-item dropdown">
+        @if (SignInManager.IsSignedIn(User))
+        {
         <li class="nav-item">
-            <a class="nav-link text-dark font-weight-bolder" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@Localizer["Profile"]</a>
+            <a class="nav-link text-light font-weight-bolder mr-2" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@Localizer["Profile"]</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark font-weight-bolder" asp-controller="Collections" asp-action="Index">@Localizer["My сollections"]</a>
+            <a class="nav-link text-light font-weight-bolder mr-2" asp-controller="Collections" asp-action="Index">@Localizer["My сollections"]</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark font-weight-bolder">@Localizer["Logout"]</button>
+                <button type="submit" class="nav-link btn btn-link text-light font-weight-bolder mr-2">@Localizer["Logout"]</button>
             </form>
         </li>
     }
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark font-weight-bolder" asp-area="Identity" asp-page="/Account/Register">@Localizer["Register"]</a>
+            <a class="nav-link text-light font-weight-bolder mr-2" asp-area="Identity" asp-page="/Account/Register">@Localizer["Register"]</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark font-weight-bolder" asp-area="Identity" asp-page="/Account/Login">@Localizer["Login"]</a>
+            <a class="nav-link text-light font-weight-bolder mr-2" asp-area="Identity" asp-page="/Account/Login">@Localizer["Login"]</a>
         </li>
     }
-</ul>
+    </ul>
