Basics for future comments system

--- a/Collectors/Views/Shared/_Layout.cshtml
+++ b/Collectors/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 <body>
     <header class="darkmode-ignore w-100" style="background-color:#371148">
         <nav class="navbar navbar-expand-lg">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" 
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -54,6 +54,7 @@
     <script src="~/js/Darkmode.js/darkmode-js.min.js"></script>
     <script src="~/js/enableDarkMode.js"></script>
     <script src="~/js/tagify/tagify.min.js"></script>
+    <script src="~/js/signalr/dist/browser/signalr.min.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
