--- a/Collectors/Views/Items/Index.cshtml
+++ b/Collectors/Views/Items/Index.cshtml
@@ -94,13 +94,13 @@
             </tr>
         </thead>
         <tbody>
-            @for (int i = 0; i < Model.Items.Count; i++)
+            @for (int i = 0; i < Model.Items.Count; i++) 
             {
                 <tr>
                     <td>
                         <input type="checkbox" asp-for="@Model.Selected[i]" />
                     </td>
-                    <td>@Model.Items[i].Name</td>
+                    <td>@Html.ActionLink(@Model.Items[i].Name, "Index", "Item", new { id = Model.Items[i].Id }, null)</td>
                     <td>@Model.Items[i].Tags</td>
                     @{
                         manager = new FieldManager(Model.Items[i]);
