--- a/Collectors/Views/Items/Index.cshtml
+++ b/Collectors/Views/Items/Index.cshtml
@@ -74,7 +74,7 @@
             </ul>
             <input class="form-control mr-sm-2" type="search" value="" name="searchString"
                    placeholder="@Localizer["Search by name"]" aria-label="Search">
-            <button asp-action="SearchByName" class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            <button asp-action="SearchByName" class="btn btn-outline-dark my-3 my-sm-1" type="submit">
                 <img src="~/bootstrap-icons/icons/search.svg" />
             </button>
         </div>
