--- a/Collectors/Views/Shared/_Layout.cshtml
+++ b/Collectors/Views/Shared/_Layout.cshtml
@@ -12,27 +12,32 @@
     <link rel="stylesheet" href="~/css/tagify.css" />
 </head>
 <body>
-    <header class="darkmode-ignore w-100" style="background-color:#371148">
+    <header class="darkmode-ignore w-100" style="background-color:#9209ce">
         <nav class="navbar navbar-expand-lg">
             <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <img src="~/bootstrap-icons/icons/menu-down.svg" />
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
 
                     <li class="nav-item">
-                        <a class="nav-link text-light font-weight-bolder" asp-area="" asp-controller="Home" asp-action="Index">@Localizer["Home"]</a>
+                        <a class="nav-link text-light font-weight-bolder" asp-area="" asp-controller="Home" 
+                           asp-action="Index">@Localizer["Home"]</a>
                     </li>
                     <li>
-                        <a class="nav-link text-light font-weight-bolder" asp-area="" asp-controller="Home" asp-action="Privacy">@Localizer["Privacy"]</a>
+                        <a class="nav-link text-light font-weight-bolder" asp-area="" asp-controller="Home" 
+                           asp-action="Privacy">@Localizer["Privacy"]</a>
                     </li>
                 </ul>
                 <partial name="_LoginPartial" />
                 <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <input class="form-control mr-sm-2" type="search" placeholder=@Localizer["Search"]
+                           aria-label=@Localizer["Search"]>
+                    <button class="btn btn-success my-2 my-sm-0" type="submit">
+                        <img src="~/bootstrap-icons/icons/search.svg" />
+                    </button>
                 </form>
             </div>
         </nav>
@@ -45,7 +50,9 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - Collectors - <a asp-area="" asp-controller="Home" asp-action="Privacy">@Localizer["Privacy"]</a>
+            &copy; 2020 - Collectors - <a asp-area="" asp-controller="Home" asp-action="Privacy">
+                @Localizer["Privacy"]
+            </a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
