Fixed problem with editing additional fields

--- a/Collectors/Views/Items/Edit.cshtml
+++ b/Collectors/Views/Items/Edit.cshtml
@@ -59,6 +59,7 @@
                                       value="@fieldManager.GetFieldByIndex(index)" class="form-control m-2">
                                 </textarea>
                         }
+                        <input type="hidden" value="@index" asp-for="AdditionalFieldsIndexes" />
                     </div>
                 }
             </div>
