--- a/Collectors/Views/Shared/_Layout.cshtml
+++ b/Collectors/Views/Shared/_Layout.cshtml
@@ -15,11 +15,11 @@
     <header class="darkmode-ignore w-100" style="background-color:#9209ce">
         <nav class="navbar navbar-expand-lg">
             <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    data-target="#navbarContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <img src="~/bootstrap-icons/icons/menu-down.svg" />
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbarContent">
                 <ul class="navbar-nav mr-auto">
 
                     <li class="nav-item">
@@ -33,9 +33,9 @@
                 </ul>
                 <partial name="_LoginPartial" />
                 <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder=@Localizer["Search"]
+                    <input name="searchString" class="form-control mr-sm-2" type="search" placeholder=@Localizer["Search"]
                            aria-label=@Localizer["Search"]>
-                    <button class="btn btn-success my-2 my-sm-0" type="submit">
+                    <button asp-controller="Home" asp-action="Search" class="btn btn-success my-2 my-sm-0" type="submit">
                         <img src="~/bootstrap-icons/icons/search.svg" />
                     </button>
                 </form>
