--- a/Collectors/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/Collectors/Views/Shared/_SelectLanguagePartial.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Options
 
-@inject IViewLocalizer Localizer
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 @inject IOptions<RequestLocalizationOptions> LocOptions
 
 @{
@@ -13,10 +13,10 @@
         .ToList();
 }
 
-<form asp-controller="Home" asp-action="SetLanguage" 
+<form asp-controller="Home" asp-action="SetLanguage"
       asp-route-returnUrl="@Context.Request.Path"
       method="post" class="mt-2 form-horizontal">
-    Language: <select name="culture" onchange="this.form.submit();"
+    @SharedLocalizer["Language"]: <select name="culture" onchange="this.form.submit();"
                       asp-for="@requestCulture.RequestCulture.UICulture.Name"
                       asp-items="cultureItems"></select>
 </form>
