--- a/Collectors/Views/Home/Search.cshtml
+++ b/Collectors/Views/Home/Search.cshtml
@@ -2,9 +2,11 @@
 @using Collectors.Models;
 @using Collectors.Classes;
 @using Collectors.Data.Classes;
-@using Markdig;
+@using Microsoft.AspNetCore.Identity
 @inject IViewLocalizer Localizer;
 @inject IHtmlLocalizer<SharedResource> SharedLocalizer
+@inject SignInManager<IdentityUser> SignInManager
+
 @model List<CollectionItem>
 @{
     IFieldManager manager;
@@ -15,16 +17,25 @@
     <table id="data-table" class="table table-striped table-bordered nowrap" width="80%">
         <thead>
             <tr>
+
+                <th>@SharedLocalizer["Likes"]</th>
                 <th>@SharedLocalizer["Name"]</th>
                 <th>@SharedLocalizer["Tags"]</th>
 
             </tr>
         </thead>
         <tbody>
+
             @for (int i = 0; i < Model.Count; i++)
             {
                 <tr>
+
                     <td>
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <button style="border-radius:50%" class="like"><img src="~/bootstrap-icons/icons/heart.svg" /></button>
+                        }
+                        <span class="likesCount">@Model[i].Likes</span>
                     </td>
                     <td>@Html.ActionLink(Model[i].Name, "Index", "Item", new { id = Model[i].Id }, null)</td>
                     <td>@Model[i].Tags</td>
@@ -43,3 +54,8 @@
         </tbody>
     </table>
 </form>
+
+
+@section scripts{
+    <script src="~/js/likes.js"></script>
+}
