--- a/Collectors/Views/Home/Search.cshtml
+++ b/Collectors/Views/Home/Search.cshtml
@@ -6,56 +6,55 @@
 @inject IViewLocalizer Localizer;
 @inject IHtmlLocalizer<SharedResource> SharedLocalizer
 @inject SignInManager<IdentityUser> SignInManager
+@using Collectors.Models.Item; 
+@model List<ItemLikesModel>;
 
-@model List<CollectionItem>
 @{
     IFieldManager manager;
     string name = SharedLocalizer["Name"].Value;
     string tags = SharedLocalizer["Tags"].Value;
 }
-<form method="post">
-    <table id="data-table" class="table table-striped table-bordered nowrap" width="80%">
-        <thead>
+
+<table id="data-table" class="table table-striped table-bordered nowrap" width="80%">
+    <thead>
+        <tr>
+
+            <th>@SharedLocalizer["Likes"]</th>
+            <th>@SharedLocalizer["Name"]</th>
+            <th>@SharedLocalizer["Tags"]</th>
+
+        </tr>
+    </thead>
+    <tbody>
+
+        @for (int i = 0; i < Model.Count; i++)
+        {
             <tr>
 
-                <th>@SharedLocalizer["Likes"]</th>
-                <th>@SharedLocalizer["Name"]</th>
-                <th>@SharedLocalizer["Tags"]</th>
-
-            </tr>
-        </thead>
-        <tbody>
-
-            @for (int i = 0; i < Model.Count; i++)
-            {
-                <tr>
-
-                    <td>
-                        @if (SignInManager.IsSignedIn(User))
-                        {
-                            <button style="border-radius:50%" class="like"><img src="~/bootstrap-icons/icons/heart.svg" /></button>
-                        }
-                        <span class="likesCount">@Model[i].Likes</span>
-                    </td>
-                    <td>@Html.ActionLink(Model[i].Name, "Index", "Item", new { id = Model[i].Id }, null)</td>
-                    <td>@Model[i].Tags</td>
-                    @{
-                        manager = new FieldManager(Model[i]);
-                    }
-                    @for (int j = 0; j < 15; j++)
+                <td>
+                    @if (SignInManager.IsSignedIn(User))
                     {
-                        if (manager.GetFieldByIndex(j) != null)
-                        {
-                            <td>@Html.Raw(manager.GetFieldByIndex(j))</td>
-                        }
+                        <form asp-action="Like">
+                            <input name="itemId" value="@Model[i].Item.Id" type="hidden" />
+                            <input name="searchStr" value="@ViewBag.searchString" type="hidden" />
+                            <button style="border-radius:50%" class="like"><img src="~/bootstrap-icons/icons/heart.svg" /></button>
+                        </form>
                     }
-                </tr>
-            }
-        </tbody>
-    </table>
-</form>
-
-
-@section scripts{
-    <script src="~/js/likes.js"></script>
-}
+                    <span class="likesCount">@Model[i].Item.Likes</span>
+                </td>
+                <td>@Html.ActionLink(Model[i].Item.Name, "Index", "Item", new { id = Model[i].Item.Id }, null)</td>
+                <td>@Model[i].Item.Tags</td>
+                @{
+                    manager = new FieldManager(Model[i].Item);
+                }
+                @for (int j = 0; j < 15; j++)
+                {
+                    if (manager.GetFieldByIndex(j) != null)
+                    {
+                        <td>@Html.Raw(manager.GetFieldByIndex(j))</td>
+                    }
+                }
+            </tr>
+        }
+    </tbody>
+</table>
