--- a/Collectors/Views/Home/Index.cshtml
+++ b/Collectors/Views/Home/Index.cshtml
@@ -14,9 +14,53 @@
 </div>
 <div class="text-center">
 
-    <h2 class="display-4">@Localizer["Message"]</h2>
-
-    <div class="col-md-4 float-right m-0" id="tagsCloud">
+    <div id="carouselExampleControls" class="carousel slide bg-info p-4 w-100" data-ride="carousel">
+        <h3>Most interesing collections</h3>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="center-block w-auto" src="~/img/ImageNotSet.png" alt="First slide" style="height:350px">
+            </div>
+            @{
+                for (int i = 0; i < 5; i++)
+                {
+                    <div class="carousel-item">
+                        <img class="center-block w-auto" src="~/img/123.jpg" alt="Second slide" style="height:350px">
+                    </div>
+                }
+            }
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+    <div class="col-md-6 float-left mt-4 mb-5">
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Item name</h5>
+                <p class="card-text">Tags of the item</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                @*@{
+                    manager = new FieldManager(Model.Items[i]);
+                }
+                @foreach (var j in Model.AdditionalFieldsIndexes)
+                {
+                    <li class="list-group-item">
+                        @Html.Raw(manager.GetFieldByIndex(j))</li>
+                }*@
+            <li class="list-group-item">Cras justo odio</li>
+            <li class="list-group-item">Dapibus ac facilisis in</li>
+            <li class="list-group-item">Vestibulum at eros</li>
+            </ul>
+        </div>
+    </div>
+    <div class="col-md-6 float-right mt-4 mb-5" id="tagsCloud">
         <h4>@Localizer["Search items by tags"]</h4>
         <form asp-action="SearchTags" asp-controller="Home">
             @{
@@ -28,7 +72,9 @@
             }
         </form>
     </div>
+    <div id="blank" class="col-md-12" style="height:500px">
 
+    </div>
 </div>
 
 @section scripts{
