--- a/Collectors/Views/Home/Search.cshtml
+++ b/Collectors/Views/Home/Search.cshtml
@@ -1,10 +1,10 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization;
 @using Collectors.Classes;
-@using Collectors.Models.Item;
+@using Collectors.Data.Classes;
 @using Microsoft.AspNetCore.Identity
 @inject IHtmlLocalizer<SharedResource> SharedLocalizer
 @inject SignInManager<IdentityUser> SignInManager
-@model List<ItemLikesModel>;
+@model List<CollectionItem>;
 
 @{
     IFieldManager manager;
@@ -12,46 +12,45 @@
     string tags = SharedLocalizer["Tags"].Value;
 }
 
-<table id="data-table" class="table table-striped table-bordered nowrap" width="80%">
-    <thead>
-        <tr>
-
-            <th>@SharedLocalizer["Likes"]</th>
-            <th>@SharedLocalizer["Name"]</th>
-            <th>@SharedLocalizer["Tags"]</th>
-
-        </tr>
-    </thead>
-    <tbody>
-
-        @for (int i = 0; i < Model.Count; i++)
+<div class="card-columns">
+    @{
+        foreach (var element in Model)
         {
-            <tr>
 
-                <td>
-                    @if (SignInManager.IsSignedIn(User))
-                    {
-                        <form asp-action="Like">
-                            <input name="itemId" value="@Model[i].Item.Id" type="hidden" />
-                            <input name="searchStr" value="@ViewBag.searchString" type="hidden" />
-                            <button style="border-radius:50%" class="like"><img src="~/bootstrap-icons/icons/heart.svg" /></button>
-                        </form>
+            <div class="card m-4 bg-info" style="width: 20rem;">
+                <div class="card-body">
+                    <h5 class="card-title">@Html.ActionLink(element.Name, "Index", "Item", new { id = element.Id }, null)</h5>
+                    <p class="card-text">@element.Tags</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <form asp-action="Like">
+                                <input name="itemId" value="@element.Id" type="hidden" />
+                                <input name="searchStr" value="@ViewBag.searchString" type="hidden" />
+                                <button style="border-radius:50%" class="like"><img src="~/bootstrap-icons/icons/heart.svg" /></button>
+                            </form>
+                        }
+                        <span class="likesCount">@element.Likes</span>
+                    </li>
+                    @{
+                        manager = new FieldManager(element);
                     }
-                    <span class="likesCount">@Model[i].Item.Likes</span>
-                </td>
-                <td>@Html.ActionLink(Model[i].Item.Name, "Index", "Item", new { id = Model[i].Item.Id }, null)</td>
-                <td>@Model[i].Item.Tags</td>
-                @{
-                    manager = new FieldManager(Model[i].Item);
-                }
-                @for (int j = 0; j < 15; j++)
-                {
-                    if (manager.GetFieldByIndex(j) != null)
+                    @for (int i = 0; i < 15; i++)
                     {
-                        <td>@Html.Raw(manager.GetFieldByIndex(j))</td>
+                        string fieldVal = manager.GetFieldByIndex(i);
+                        if (!string.IsNullOrEmpty(fieldVal) && fieldVal != "0")
+                        {
+                            <li class="list-group-item">
+                                @Html.Raw(fieldVal)
+                            </li>
+                        }
                     }
-                }
-            </tr>
+                </ul>
+            </div>
+
+
         }
-    </tbody>
-</table>
+    }
+</div>
